# lyrics

./: .gitattributes  .gitmodules  README.md
.github/workflows/: build-go-musicfox.yml  cmake-single-platform.yml  release.yml
taskbar-lyrics-musicfox/: .gitignore  API_REFERENCE.md  BUILD_SUCCESS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  Integrate_DLL-based_lyrics_display_plugin_for_Windows,_adding_support_for_loading_`native_.patch  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  USAGE.md  build-dll-only.bat  build.sh  buildDll&Test.bat  clean.bat  clean.ps1  full.patch  player.patch
taskbar-lyrics-musicfox/src/: DllMain.cpp
taskbar-lyrics-musicfox/src/plugin/: Config.cppm  Plugin.cppm
taskbar-lyrics-musicfox/src/taskbar/: Handler.cppm  Registry.cppm  Taskbar.cppm
taskbar-lyrics-musicfox/src/utils/: WindowsVersion.cppm
taskbar-lyrics-musicfox/src/window/: Lyrics.cppm  Renderer.cppm  Window.cppm  WindowWin10.cppm
taskbar-lyrics-musicfox/test/: CMakeLists.txt  QUICK_FIX.md  README.md  README_SCRIPTS.md  build.bat  build_and_run.bat  build_and_run.ps1  run.bat  run_dll.ps1  simple_test.cpp  test_dll.cpp
